Bug 1148903 - Allow control characters to be rendered by user fonts. r=roc